src/_includes/assets/css/screen.css
/* ... */
.kg-bookmark-thumbnail img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 0 3px 3px 0;
}

.kg-bookmark-metadata {
  display: flex;
  align-items: center;
  font-size: 1.5rem;
  font-weight: 400;
  color: var(--gray75);
  margin-top: 14px;
  flex-wrap: wrap;
}

.post-full-content .kg-bookmark-icon {
  width: 22px;
  height: 22px;
  margin-right: 8px;
}

.kg-bookmark-author {
  line-height: 1.5em;
}

.kg-bookmark-author:after {
  content: '•';
  margin: 0 6px;
}

.kg-bookmark-publisher {
  overflow: hidden;
  line-height: 1.5em;
  text-overflow: ellipsis;
  white-space: nowrap;
  max-width: 240px;
}

@media (max-width: 500px) {
  .post-full-content .kg-bookmark-container {
    flex-direction: column;
  }

  .kg-bookmark-thumbnail {
    order: 1;
    width: 100%;
    min-height: 160px;
  }

  .kg-bookmark-thumbnail img {
    border-radius: 3px 3px 0 0;
  }

  .kg-bookmark-content {
    order: 2;
  }
}

/* 8. Author Template
/* ---------------------------------------------------------- */

.under-header-content .author-profile-image,
.under-header-content .avatar-wrapper {
  z-index: 10;
  flex-shrink: 0;
  margin: 0 0 20px;
  width: 150px;
  height: 150px;
  box-shadow: 0 0 0 6px var(--gray75);
}

.under-header-content .author-bio {
  z-index: 10;
  flex-shrink: 0;
  margin: 5px 0 10px;
  max-width: 600px;
  font-size: 2rem;
  line-height: 1.3em;
  font-weight: 300;
  letter-spacing: 0.5px;
  opacity: 0.8;
}

.under-header-content .author-meta {
  z-index: 10;
  flex-shrink: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0 0 10px;
  font-family: 'Lato', sans-serif;
  font-display: swap;
  font-style: italic;
}

.under-header-content .author-location svg {
  height: 1.9rem;
  stroke: #fff;
}

.under-header-content .bull {
  display: inline-block;
  margin: 0 12px;
  opacity: 0.5;
}

.under-header-content .social-link:first-of-type {
  padding-left: 4px;
}

@media (max-width: 500px) {
  .under-header-content .author-bio {
    font-size: 1.8rem;
    line-height: 1.15em;
    letter-spacing: 0;
  }

  .author-location,
  .author-stats {
    display: none;
  }
}

/* 9. Error Template
/* ---------------------------------------------------------- */

.error-template .site-main {
  padding: 7vw 4vw;
}

.site-nav-center {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.site-nav-center .site-nav-logo {
  margin-right: 0;
}

.error-message {
  text-align: center;
}

.error-code {
  margin: 0;
  font-size: 12vw;
  line-height: 1em;
  opacity: 0.3;
}

.error-description {
  margin: 0;
  color: var(--gray75);
  font-size: 3rem;
  line-height: 1.3em;
  font-weight: 400;
}

@media (max-width: 800px) {
  .error-description {
    margin: 5px 0 0;
    font-size: 1.8rem;
  }
}

.error-link {
  display: inline-block;
  margin-top: 5px;
}

.error-template .post-feed {
  padding-top: 0;
}

/* 10. Site Footer
/* ---------------------------------------------------------- */

.site-footer {
  color: var(--gray85);
  background: var(--gray05);
  line-height: 1.6;
  padding: 40px 15px;
  font-size: 16px;
}

.footer-top {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(30.5em, 1fr));
}

@media (max-width: 500px) {
  .footer-top {
    grid-template-columns: repeat(auto-fit, minmax(19em, 1fr));
  }
}

.footer-top,
.footer-bottom {
  width: min(100%, 1300px);
  margin-inline: auto;
}

.site-footer p {
  margin: 0 0 1.45rem;
  line-height: 30px;
  font-size: 16px;
}

.site-footer a {
  color: var(--gray85);
  text-decoration: none;
  padding: 2px;
}

.site-footer a:hover {
  text-decoration: underline;
}

.site-footer .col-header,
.trending-guides .col-header {
  text-align: center;
  font-weight: 700;
  font-size: 16px;
  padding: 0 15px 15px;
  margin-bottom: 0;
}

.trending-guides-articles {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(11em, 1fr));
  grid-column-gap: 3rem;
  grid-row-gap: 0.5rem;
}

@media (max-width: 1400px) {
  .trending-guides-articles {
    grid-template-columns: repeat(auto-fit, minmax(12em, 1fr));
  }
}

@media (max-width: 800px) {
  .trending-guides-articles {
    grid-template-columns: repeat(auto-fit, minmax(13em, 1fr));
  }
}

.footer-row {
  margin: 0;
}

.footer-col {
  padding-inline: 15px;
  font-size: 16px;
}

.footer-col a {
  padding: 5px 0;
}

.footer-desc-col {
  padding-inline: 15px;
  margin-bottom: 30px;
  align-self: center;
}

.footer-desc-col a {
  text-decoration: underline;
  padding: 2px;
}

p.footer-donation {
  font-weight: 700;
  font-size: 18px;
}

p.footer-donation a:hover {
  text-decoration: none;
}

.trending-guides {
  margin: 0 0 3rem;
}

.footer-bottom .our-nonprofit {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
}

.footer-bottom .our-nonprofit a {
  padding: 5px 10px;
}

@media (min-width: 500px) {
  .footer-col {
    font-size: 15;
  }
}

@media (min-width: 800px) {
  .footer-col {
    font-size: 16.5;
  }

  .footer-bottom .our-nonprofit a {
    padding: 5px;
  }
}

@media (min-width: 1200px) {
  .footer-desc-col {
    flex: 1 0 45%;
  }

  .trending-guides {
    flex: 1 0 58%;
  }

  p.footer-donation {
    margin-top: 40px;
  }

  .footer-bottom .our-nonprofit {
    padding-inline: 10px;
    padding-top: 1.25rem;
    justify-content: space-between;
  }

  .footer-bottom .col-header {
    visibility: hidden;
    padding: 0px;
    margin: 0;
    height: 1px;
  }

  .our-nonprofit {
    border-top: 1px;
    border-top-style: solid;
    border-top-color: var(--gray15);
  }
}

/* 11. buttons-row
/* ---------------------------------------------------------- */

.read-more-row {
  display: flex;
  flex-direction: row;
  align-content: center;
  justify-content: center;
  padding-bottom: 2vw;
  padding-top: 2vw;
}
/* ... */

